--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </section>
 
         <!-- Section B: About -->
-        <section class="About flex-columns">
+        <section class="About flex-columns" id="About">
             <div class="row">
 
                 <div class="column">
@@ -78,7 +78,7 @@
 
 
         <!-- Section C: Services -->
-        <section class="services">
+        <section id="services" class="flex-columns-reverse">
             <div class="services-content">
                 <h2>We specialize in</h2>
                 <p></p>
