--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
                 <div class="column">
                     <div class="column-2 bg-light">
-                        <form action="process.php" method="post" class="callback-form">
+                        <form action="" method="post" class="callback-form">
                             <div class="form-control">
                                 <label for="name"></label>
                                 <input type="text" name="name" id="name" placeholder="name">
@@ -51,6 +51,11 @@
                             <div class="form-control">
                                 <label for="phone"></label>
                                 <input type="text" phone="phone" id="phone" placeholder="Enter phone number">
+                            </div>
+                            <div class="form-control">
+                                <label for="text"></label>
+                                <textarea type="textarea" name="textarea" id="textarea"
+                                    placeholder="Enter Message"></textarea>
                             </div>
 
                             <input type="submit" value="send" id="submit" class="btn btn-secondarny">
@@ -84,7 +89,7 @@
                 <ul>
                     <li><a href="">Help & Support</a></li>
                     <li><a href="">Privacy Policy</a></li>
-                    <li><a href="">About Us</a></li>
+                    <li><a href="#About">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
