--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div class="right-container">
                 <div class="right-container-nav">
-                    <a href="contact.html">Contact Us</a>
+                    <a href="contact.html" class="btn btn-dark">Contact Us</a>
                 </div>
 
                 <div class="right-container-content"></div>
@@ -40,14 +40,14 @@
 
 
             <div class="floating-hero">
-                <img src="" alt="">
+                <!-- <img src="" alt=""> -->
             </div>
         </div>
     </header>
 
     <main>
         <!-- Section A: Ratings -->
-        <section class="rating-highlight">
+        <section id="rating-highlight">
             <div class="container">
                 <p>Most of our customers rate our services <strong>Excellent.</strong> Based on 2500 reviews.</p>
             </div>
