--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="left-container">
                 <div class="left-container-nav">
-                    <a href="index.html">
+                    <a href="index.html" class="logo">
                         <h1>Onla</h1>
                     </a>
                     <a href="#Services">Services</a>
@@ -24,7 +24,9 @@
                 </div>
 
                 <div class="left-container-content">
-                    <h1>You Call We Answer</h1>
+                    <h1>You Call
+                        <br>We Answer
+                    </h1>
                     <p>Let us fight for you. We are here to handle your legal needs.</p>
                     <a href="contact.html" class="btn btn-primary">I Need A Lawyer</a>
                 </div>
@@ -49,7 +51,11 @@
         <!-- Section A: Ratings -->
         <section id="rating-highlight">
             <div class="container">
-                <p>Most of our customers rate our services <strong>Excellent.</strong> Based on 2500 reviews.</p>
+                <p>Most of our customers rate our services <span class="dark-text">Excellent.</span>
+                    <i class="fa-solid fa-star primary-text"></i><i class="fa-solid fa-star primary-text"></i>
+                    <i class="fa-solid fa-star primary-text"></i><i class="fa-solid fa-star primary-text"></i>
+                    <i class="fa-solid fa-star-half primary-text"></i> Based on 2500 reviews.
+                </p>
             </div>
         </section>
 
@@ -116,21 +122,27 @@
 
             <div class="flex-items">
                 <div>
-                    <img src="" alt="">
+                    <img src="./images/person-1.jpg" alt="">
                     <h4>Tim Branks</h4>
                     <p>Managing partner</p>
                 </div>
 
                 <div>
-                    <img src="" alt="">
+                    <img src="./images/person-2.jpg" alt="">
                     <h4>Hannah Grenshaw</h4>
                     <p>Partner</p>
                 </div>
 
                 <div>
-                    <img src="" alt="">
+                    <img src="./images/person-3.jpg" alt="">
                     <h4>Mike Brown</h4>
                     <p>Litigation Attorney</p>
+                </div>
+
+                <div>
+                    <img src="./images/person-4.jpg" alt="">
+                    <h4>Lily Mudavo</h4>
+                    <p>Associate Partner</p>
                 </div>
             </div>
         </section>
