Services section styling

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 
                 <div class="column">
                     <div class="column-1">
-                        <img src="" alt="Corporate people smiling at the camera">
+                        <img src="./images/team-picture-01.jpg" alt="Corporate people smiling at the camera">
                     </div>
                 </div>
 
                 <div class="column">
-                    <div class="column-2 bg-primary">
+                    <div class="column-2 bg-dark">
                         <h4>Since 1956</h4>
                         <h2>We represent you like our lives depend on it, because they do.</h2>
                         <p>We are committed to exceeding our clients' expectations when it comes to defending their
@@ -85,28 +85,44 @@
 
 
         <!-- Section C: Services -->
-        <section id="services" class="flex-columns-reverse">
-            <div class="services-content">
-                <h2>We specialize in</h2>
-                <p></p>
-                <div class="services-cards">
-                    <div class="service-card">
-                        <h3>Corporate Law</h3>
-                        <p>If you have a business let us make it our business to keep you in business.</p>
+        <section id="services" class="flex-columns flex-reverse">
+            <div class="services-content row">
+
+                <div class="column">
+                    <div class="column-1">
+                        <h2>Our areas of expertise</h2>
+                        <p></p>
                     </div>
-                    <div class="service-card">
-                        <h3>Real Estate Litigation</h3>
-                        <p>Based on a thorough understanding of the industry, we offer our clients innovative and
-                            realistic dispute avoidance strategies.</p>
-                    </div>
-                    <div class="service-card">
-                        <h3>Tax Law</h3>
-                        <p>We will help you hold on to your money, legally of course.</p>
-                    </div>
-                    <div class="service-card">
-                        <h3>International Business Law</h3>
-                        <p>we focus on economics and the law, international commercial transactions, licensing, tariffs
-                            and taxes, </p>
+                </div>
+
+                <div class="column">
+                    <div class="services-cards column-2">
+                        <div class="service-card">
+                            <i class="fa-solid fa-globe"></i>
+                            <h3>International Business Law</h3>
+                            <p>we focus on economics and the law, international commercial transactions, licensing,
+                                tariffs
+                                and taxes, </p>
+                        </div>
+
+                        <div class="service-card">
+                            <i class="fa-solid fa-building"></i>
+                            <h3>Real Estate Litigation</h3>
+                            <p>We provide you with innovative and realistic dispute avoidance strategies, based on our
+                                industry knowledge.</p>
+                        </div>
+
+                        <div class="service-card">
+                            <i class="fa-solid fa-coins"></i>
+                            <h3>Tax Law</h3>
+                            <p>We will help you hold on to your money, legally of course.</p>
+                        </div>
+
+                        <div class="service-card">
+                            <i class="fa-solid fa-briefcase"></i>
+                            <h3>Corporate Law</h3>
+                            <p>If you have a business let us make it our business to keep you in business.</p>
+                        </div>
                     </div>
                 </div>
             </div>
