--- a/index.html
+++ b/index.html
@@ -89,9 +89,15 @@
             <div class="services-content row">
 
                 <div class="column">
-                    <div class="column-1">
+                    <div class="column-1 services-content-left">
+                        <h4>Services</h4>
                         <h2>Our areas of expertise</h2>
-                        <p></p>
+                        <p>We are committed to exceeding our clients' expectations when it comes to defending their
+                            rights, interests, reputation, and financial well-being. We accomplish this by developing
+                            tailored strategies and backing them up with unrivaled legal, medical, scientific, and
+                            technological expertise.</p>
+                        <a href="contact.html" class="btn btn-accent"><i class="fa-solid fa-chevron-right"></i> Get In
+                            Touch</a>
                     </div>
                 </div>
 
@@ -137,28 +143,22 @@
             </header>
 
             <div class="flex-items">
-                <div>
-                    <img src="./images/person-1.jpg" alt="">
+                <div class="team-card">
+                    <img src="./images/person-1.jpg" alt="Man portrait">
                     <h4>Tim Branks</h4>
                     <p>Managing partner</p>
                 </div>
 
-                <div>
-                    <img src="./images/person-2.jpg" alt="">
+                <div class="team-card">
+                    <img src="./images/person-2.jpg" alt="Woman looking to the side">
                     <h4>Hannah Grenshaw</h4>
                     <p>Partner</p>
                 </div>
 
-                <div>
-                    <img src="./images/person-3.jpg" alt="">
+                <div class="team-card">
+                    <img src="./images/person-3.jpg" alt="Man Close up portrait">
                     <h4>Mike Brown</h4>
                     <p>Litigation Attorney</p>
-                </div>
-
-                <div>
-                    <img src="./images/person-4.jpg" alt="">
-                    <h4>Lily Mudavo</h4>
-                    <p>Associate Partner</p>
                 </div>
             </div>
         </section>
@@ -167,8 +167,8 @@
     <footer id="main-footer" class="py-2">
         <div class="container footer-container">
 
-            <div>
-                <a href="index.html">
+            <div class="logo">
+                <a href="index.html" class="logo-link">
                     <h1>Onla</h1>
                 </a>
             </div>
@@ -195,10 +195,10 @@
             <div>
                 <h2>Mantle Club</h2>
                 <p>By joining you get 24/7 legal aid anywhere in the world.</p>
-                <a href="#" class="btn btn-extra">Join Now</a>
+                <a href="#" class="btn btn-accent">Join Now</a>
             </div>
 
-            <div>
+            <div class="copyright-info">
                 <p>Copyright &copy 2019 All Rights Reserved.</p>
             </div>
 
