Contact page styling v1

--- a/contact.html
+++ b/contact.html
@@ -7,35 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/8b76552a26.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="utilities.css">
     <title>Onla | Law Firm</title>
 </head>
 
-<body>
-    <header>
-        <nav>
-            <div class="left-nav">
-                <a href="index.html">
-                    <h1>Onla</h1>
-                </a>
-                <a href="#Services">Services</a>
-                <a href="#About">About</a>
+<body id="contact-page">
+
+    <header id="main-header" class="header-b">
+        <div class="container">
+            <div class="left-container">
+                <div class="left-container-nav">
+                    <a href="index.html" class="logo">
+                        <h1>Onla</h1>
+                    </a>
+                    <a href="#Services">Services</a>
+                    <a href="#About">About</a>
+                </div>
             </div>
 
-            <div class="right-nav">
-                <a href="contact.html">Contact Us</a>
+            <div class="right-container">
+                <div class="right-container-nav">
+                    <a href="contact.html" class="btn btn-dark">Contact Us</a>
+                </div>
+
             </div>
-        </nav>
+        </div>
     </header>
 
-    <main>
+    <main class="main-b">
         <section id="contact" class="contact flex-columns">
             <div class="row">
 
-                <div class="column">
+                <!-- <div class="column">
                     <div class="column-1">
-                        <img src="./image_resources/home/contact.jpg" alt="contact team smiling at the camera">
+                        <img src="" alt="contact team smiling at the camera">
                     </div>
-                </div>
+                </div> -->
 
                 <div class="column">
                     <div class="column-2 bg-light">
@@ -66,7 +73,7 @@
         </section>
     </main>
 
-    <footer id="main-footer" class="py-2">
+    <footer id="main-footer" class="py-2 footer-b">
         <div class="container footer-container">
 
             <div>
