--- a/contact.html
+++ b/contact.html
@@ -35,18 +35,36 @@
     </header>
 
     <main class="main-b">
-        <section id="contact" class="contact flex-columns">
-            <div class="row">
+        <section id="contact" class="contact">
 
-                <!-- <div class="column">
-                    <div class="column-1">
-                        <img src="" alt="contact team smiling at the camera">
+            <div class="form-container">
+
+                <div class="form-content">
+                    <h2>Get in touch!</h2>
+                    <p>Contact us for a quote or get help joining the Mantle Club.</p>
+
+                    <div class="contact-icons">
+                        <div class="contact-icon">
+                            <i class="fa-solid fa-location-dot fa-2x"></i>
+                            <p>101 St. 8796 Where</p>
+                        </div>
+                        <div class="contact-icon">
+                            <i class="fa-solid fa-phone fa-2x"></i>
+                            <p>+0 121 4567</p>
+                        </div>
+                        <div class="contact-icon">
+                            <i class="fa-solid fa-envelope fa-2x"></i>
+                            <p>email@somewhere.com</p>
+                        </div>
                     </div>
-                </div> -->
+                </div>
 
-                <div class="column">
-                    <div class="column-2 bg-light">
-                        <form action="" method="post" class="callback-form">
+
+                <div class="form-inputs">
+                    <p>Contact Form</p>
+
+                    <div class="bg-light">
+                        <form action="process.php" method="post" class="callback-form">
                             <div class="form-control">
                                 <label for="name"></label>
                                 <input type="text" name="name" id="name" placeholder="name">
@@ -60,16 +78,25 @@
                                 <input type="text" phone="phone" id="phone" placeholder="Enter phone number">
                             </div>
                             <div class="form-control">
-                                <label for="text"></label>
-                                <textarea type="textarea" name="textarea" id="textarea"
+                                <label for="text-area"></label>
+                                <textarea type="text" name="textarea" id="text-area"
                                     placeholder="Enter Message"></textarea>
                             </div>
 
-                            <input type="submit" value="send" id="submit" class="btn btn-secondarny">
+                            <div class="form-input-services">
+                                <button type="submit" value="" id="business-law">International Business</button>
+                                <button type="submit" value="" id="real-estate-law">Real Estate</button>
+                                <button type="submit" value="" id="tax-Law">Tax</button>
+                                <button type="submit" value="" id="corporate-aw">Corporate</button>
+                            </div>
+
+                            <input type="submit" value="send" id="submit" class="btn btn-primary">
                         </form>
                     </div>
                 </div>
+
             </div>
+
         </section>
     </main>
 
