Contact form styling v3

--- a/contact.html
+++ b/contact.html
@@ -88,10 +88,11 @@
 
                                     <h4 id="button-title">Services</h4>
                                     <div class="form-input-services">
-                                        <button type="submit" value="" id="business-law">International Business</button>
-                                        <button type="submit" value="" id="real-estate-law">Real Estate</button>
-                                        <button type="submit" value="" id="tax-Law">Tax</button>
-                                        <button type="submit" value="" id="corporate-aw">Corporate</button>
+                                        <input type="submit" value="International Business"
+                                            class="btn btn-light business-law">
+                                        <input type="submit" value="Real Estate" class="btn btn-light real-estate-law">
+                                        <input type="submit" value="Corporate" class="btn btn-light corporate-law">
+                                        <input type="submit" value="Tax" class="btn btn-light tax-Law">
                                     </div>
 
                                     <input type="submit" value="send" id="submit" class="btn btn-primary">
