--- a/contact.html
+++ b/contact.html
@@ -70,20 +70,22 @@
                                 <div class="grid-form">
 
                                     <label for="name"></label>
-                                    <input type="text" name="name" id="name" placeholder="name">
+                                    <input type="text" name="name" id="name" placeholder="name" class="form-data">
 
 
                                     <label for="email"></label>
-                                    <input type="email" name="email" id="email" placeholder="Enter email">
+                                    <input type="email" name="email" id="email" placeholder="Enter email"
+                                        class="form-data">
 
 
                                     <label for="phone"></label>
-                                    <input type="text" phone="phone" id="phone" placeholder="Enter phone number">
+                                    <input type="text" phone="phone" id="phone" placeholder="Enter phone number"
+                                        class="form-data">
 
 
                                     <label for="text-area"></label>
-                                    <textarea type="text" name="textarea" id="text-area"
-                                        placeholder="Enter Message"></textarea>
+                                    <textarea type="text" name="textarea" id="text-area" placeholder="Enter Message"
+                                        class="form-data"></textarea>
 
 
                                     <h4 id="button-title">Services</h4>
