--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="index.html" class="logo">
                         <h1>Onla</h1>
                     </a>
-                    <a href="#Services">Services</a>
+                    <a href="#services">Services</a>
                     <a href="#About">About</a>
                 </div>
 
