Overflow issue solved

--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
         </section>
     </main>
 
-    <footer id="main-footer" class="py-2 footer-b">
+    <footer id="main-footer">
         <div class="container footer-container">
 
             <div class="logo">
