--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/8b76552a26.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utilities.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
     <title>Onla | Law Firm</title>
 </head>
 
@@ -66,7 +67,7 @@
                         <h3>Contact Form</h3>
 
                         <div>
-                            <form action="process.php" method="post" class="callback-form">
+                            <form action="#" method="post" class="callback-form">
                                 <div class="grid-form">
 
                                     <label for="name"></label>
