--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/8b76552a26.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utilities.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
     <title>Onla | Law Firm</title>
 </head>
 
@@ -41,9 +42,7 @@
             </div>
 
 
-            <div class="floating-hero">
-                <!-- <img src="" alt=""> -->
-            </div>
+            <div class="floating-hero"></div>
         </div>
     </header>
 
@@ -61,7 +60,7 @@
         </section>
 
         <!-- Section B: About -->
-        <section class="About flex-columns" id="About">
+        <section id="About" class="About flex-columns">
             <div class="row">
 
                 <div class="column">
