Created mobile and tablet css files

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@
     <script src="https://kit.fontawesome.com/8b76552a26.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utilities.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
+    <link rel="stylesheet" media="screen and (max-width: 890px)" href="tablet.css">
+    <link rel="stylesheet" media="screen and (max-width: 640px)" href="moblie.css">
     <title>Onla | Law Firm</title>
 </head>
 
