Last few changes

--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
                     <a href="index.html" class="logo">
                         <h1>Onla</h1>
                     </a>
-                    <a href="#Services">Services</a>
-                    <a href="#About">About</a>
+                    <a href="index.html#services">Services</a>
+                    <a href="index.html#About">About</a>
                 </div>
             </div>
 
