--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <div class="column">
                     <div class="column-1">
-                        <img src="./images/team-picture-01.jpg" alt="Corporate people smiling at the camera">
+                        <img src="./images/team-picture.jpg" alt="Corporate people smiling at the camera">
                     </div>
                 </div>
 
@@ -204,6 +204,37 @@
             </div>
 
         </div>
+
+
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+        <script>
+            $(document).ready(function () {
+                // Add smooth scrolling to all links
+                $("a").on('click', function (event) {
+
+                    // Make sure this.hash has a value before overriding default behavior
+                    if (this.hash !== "") {
+                        // Prevent default anchor click behavior
+                        event.preventDefault();
+
+                        // Store hash
+                        var hash = this.hash;
+
+                        // Using jQuery's animate() method to add smooth page scroll
+                        // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+                        $('html, body').animate({
+                            scrollTop: $(hash).offset().top
+                        }, 700, function () {
+
+                            // Add hash (#) to URL when done scrolling (default click behavior)
+                            window.location.hash = hash;
+                        });
+                    } // End if
+                });
+            });
+        </script>
     </footer>
 </body>
 
